--- a/app/src/main/res/layout-sw600dp/fragment_weather.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_weather.xml
@@ -50,16 +50,20 @@
     <FrameLayout
         android:id="@+id/back_info"
         android:visibility="invisible"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="250dp"
-        app:layout_constraintTop_toBottomOf="@id/weather_icon"
+        app:layout_constraintLeft_toRightOf="@id/weather_description"
+        app:layout_constraintRight_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/city"
+        android:layout_marginLeft="50dp"
+        android:layout_marginStart="30dp"
         app:layout_constraintBottom_toBottomOf="parent"></FrameLayout>
 
     <TextView
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:id="@+id/temperature_label"
-        app:layout_constraintLeft_toLeftOf="@id/weather_icon"
+        app:layout_constraintLeft_toLeftOf="@id/back_info"
         android:text="temperature"
         style="@style/weather_label"
         app:layout_constraintTop_toTopOf="@id/back_info"
